# internal/interface/schema/legacy_proxy.go
@@ -1,0 +1,5 @@
+package schema
+
+type LegacyProxyErrorResponse struct {
+	Message string `json:"message"`
+}
